@@ -1,0 +1,11 @@
+.atkmanytomanyselectrelation-selection
+{
+  padding-left: 15px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
+.atkmanytomanyselectrelation-selected
+{
+  margin-bottom: 3px;
+}
